--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,12 @@
     "128": "icons/icon-128.png"
   },
   "action": {
-    "default_title": "Moozi Lyrics"
+    "default_title": "Moozi Lyrics",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
   },
   "background": {
     "service_worker": "background/service-worker.js",
